# beat_gen

./: .gitignore  CLAUDE.md  README.md  error.txt  pyproject.toml
src/beat_gen/: bassline_generator.py  beat1.py  beat_gen_cli.py  city.py  city_pop_bassline.py  city_pop_integration.py  demo_advanced_fills.py  demo_edm_generator.py  demo_polyrhythms.py  demo_sub_bass.py  edm_beat_generator.py  edm_drum_library.py  edm_kick.py  edm_snare.py  example.py  glitch_percussion_generator.py  kick.py  run_webapp.py  sub_bass_generator.py  webapp.py
src/beat_gen/templates/: index.html
