[project]
name = "beat-gen"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "beat_gen", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
